--- a/ppom-src/ppom.csproj
+++ b/ppom-src/ppom.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <RootNamespace>spreadsheet_dl</RootNamespace>
+    <RootNamespace>ppom</RootNamespace>
     <LangVersion>7.2</LangVersion>
   </PropertyGroup>
 
