--- a/ppom-src/ppom.csproj
+++ b/ppom-src/ppom.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <RootNamespace>ppom</RootNamespace>
     <LangVersion>7.2</LangVersion>
+    <PreserveCompilationContext>true</PreserveCompilationContext>
   </PropertyGroup>
 
   <ItemGroup>
