--- a/source/SiteBuilder/ppom.csproj
+++ b/source/SiteBuilder/ppom.csproj
@@ -9,7 +9,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Google.Apis.Sheets.v4" Version="1.37.0.1448" />
     <PackageReference Include="markdig" Version="0.15.7" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="RazorLight" Version="2.0.0-beta1" />
@@ -17,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Extensions\Extensions.csproj" />
+    <ProjectReference Include="../Extensions/Extensions.csproj" />
   </ItemGroup>
 
 </Project>
